src/objects/Delivery_Item__c.object
<CustomObject>
    <label>Delivery Item</label>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Delivery Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <referenceTo>Delivery__c</referenceTo>
        <relationshipLabel>Delivery Items</relationshipLabel>
        <relationshipName>Delivery_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Storage_Requirements__c</fullName>
        <label>Storage Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refrigerated</fullName>
                </value>
                <value>
                    <fullName>Frozen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>